--- a/src/components/formComponents/SignUp.css
+++ b/src/components/formComponents/SignUp.css
@@ -1,10 +1,10 @@
-fieldset {
+.signup-fieldset {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
 }
 
-label {
+.signup-form > label {
   margin: 0 auto;
   text-align: center;
 }
