--- a/src/components/LogPage/LogPage.css
+++ b/src/components/LogPage/LogPage.css
@@ -1,7 +1,7 @@
 .log-sect {
   display: flex;
   flex-direction: column;
-  margin: 5% 5% 0 5%;
+  margin: 5rem 5% 0 5%;
   height: 100vh;
   padding-bottom: 50px;
 }
@@ -15,12 +15,27 @@
 
 .log-fieldset {
   display: flex;
+  flex-direction: column;
+  width: 70%;
   margin: auto;
 }
 
-@media screen and (min-width: 350px) {
+.log-fieldset > legend {
+  text-align: center;
+}
+.log-fieldset > input {
+  width: 100%;
+}
+
+textarea {
+  margin-top: 1rem;
+  width: 100%;
+  height: 15rem;
+}
+
+@media screen and (max-width: 350px) {
   textarea {
-    width: 300px;
-    height: 150px;
+    width: 200px;
+    height: 250px;
   }
 }
