--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,10 +2,25 @@ nav {
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 10;
   width: 100%;
   border-bottom: 1px solid black;
   display: flex;
   align-items: center;
   min-height: 50px;
+  height: 10%;
+  z-index: 100;
+  background-color: #dbecfa;
+}
+
+nav > a {
+  margin: 0 2rem;
+  text-decoration: none;
+  color: black;
+  font-size: 1.2rem;
+}
+
+@media screen and (max-width: 375px) {
+  nav > a {
+    margin: 0 1.3rem;
+  }
 }
