--- a/src/components/ProfilePage/ProfilePage.css
+++ b/src/components/ProfilePage/ProfilePage.css
@@ -1,10 +1,10 @@
 .profile-sect {
-  min-height: 500px;
-  padding: 6% 0;
-  min-width: 80%;
-  margin: auto;
-  margin-top: 3rem;
-  margin-bottom: 0;
+  display: flex;
+  flex-direction: column;
+  margin: 5rem 5% 0 5%;
+  min-height: 100vh;
+  padding-top: 6%;
+  padding-bottom: 50px;
 }
 
 .button-grp {
@@ -24,10 +24,16 @@
   padding: 1rem;
 }
 
-.list div {
+.prof-list div {
   display: flex;
   justify-content: space-between;
   border: 1px solid black;
   margin: 0.5rem;
   padding: 0.5rem;
+}
+
+.item > a {
+  text-decoration: none;
+  color: black;
+  width: 100%;
 }
