--- a/src/components/DisplayLogList/DisplayLogList.css
+++ b/src/components/DisplayLogList/DisplayLogList.css
@@ -4,8 +4,12 @@
   border: 1px solid black;
   margin: 0.5rem;
   padding: 0.5rem;
+}
+
+.log-wrapper > a {
   text-decoration: none;
   color: black;
+  width: 100%;
 }
 
 .log-delete {
