--- a/src/components/LogPage/DisplayLog/DisplayLog.css
+++ b/src/components/LogPage/DisplayLog/DisplayLog.css
@@ -14,6 +14,13 @@
   display: flex;
 }
 
-.log-tag-wrapper > h3 {
+.tag-box {
+  display: flex;
+  border: 1px solid black;
   margin: 0 0.5em;
+}
+
+.tag-box > h3 {
+  padding: 0 0.5em;
+  margin: 0;
 }
