--- a/src/components/formComponents/CreateLog.css
+++ b/src/components/formComponents/CreateLog.css
@@ -1,8 +1,11 @@
 .added-tags-wrapper {
   display: flex;
-  border: 1px solid rgb(148, 148, 148);
-  margin: 5px 0;
+  margin-left: 5px;
   min-height: 25px;
+}
+
+.add-tag-container {
+  display: flex;
 }
 
 .tag {
