--- a/src/components/DisplayLogList/DisplayLogList.css
+++ b/src/components/DisplayLogList/DisplayLogList.css
@@ -13,9 +13,14 @@
 }
 
 .log-delete {
-  width: 50px;
 }
 
 .log-name {
   margin: 0;
+}
+
+@media screen and (max-width: 500px) {
+  .log-wrapper > a {
+    width: 90%;
+  }
 }
