--- a/src/components/DisplayLogList/DisplayLogList.css
+++ b/src/components/DisplayLogList/DisplayLogList.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   border: 1px solid black;
-  margin: 0.5rem;
+  margin: 0 0.5rem 0.5rem 0.5rem;
   padding: 0.5rem;
 }
 
@@ -13,10 +13,33 @@
 }
 
 .log-delete {
+  height: 50%;
+  border-radius: 5px;
+  border: 2px solid #7cc576;
+  background-color: white;
+  font-weight: bolder;
+  font-size: 1rem;
+  transition: 0.2s;
+}
+
+.log-delete:hover,
+.log-delete:focus {
+  background-color: #7cc576;
+  color: white;
+}
+
+.log-delete:focus {
+  outline: 0.5px solid #7cc576;
+  box-shadow: 00 0 0 1pt #7cc576;
 }
 
 .log-name {
   margin: 0;
+}
+
+.log-tag-wrapper > span {
+  font-size: 19px;
+  margin-top: -5px;
 }
 
 @media screen and (max-width: 500px) {
