--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,7 +7,7 @@ nav {
   display: flex;
   align-items: center;
   min-height: 50px;
-  height: 10%;
+  height: 8%;
   z-index: 100;
   background-color: #ffd65b;
 }
@@ -22,9 +22,40 @@ nav > a {
 nav > a > h2 {
   margin: 0;
   font-size: 1.2rem;
+  font-weight: 600;
 }
 
-@media screen and (max-width: 375px) {
+nav > a > h2:after {
+  padding-left: 0;
+  content: "+";
+  align-self: center;
+  opacity: 0;
+  position: absolute;
+}
+
+.active {
+  color: white;
+}
+
+nav > .active > h2:after {
+  color: white;
+  padding-left: 5px;
+  opacity: 1;
+  transition: 0.5s;
+}
+
+nav > a:hover,
+nav > a:focus {
+  color: white;
+  outline: none;
+}
+
+@media screen and (max-width: 500px) {
+  nav {
+    display: flex;
+    justify-content: space-around;
+  }
+
   nav > a {
     margin: 0 1.3rem;
   }
