--- a/src/components/ProfilePage/ProfilePage.css
+++ b/src/components/ProfilePage/ProfilePage.css
@@ -1,7 +1,7 @@
 .profile-sect {
   display: flex;
   flex-direction: column;
-  margin: 5rem 5% 0 5%;
+  margin: 3rem 5% 0 5%;
   min-height: 100vh;
   padding-top: 6%;
   padding-bottom: 50px;
@@ -13,29 +13,74 @@
 }
 
 .button-grp > button {
+  font-family: Cairo;
   width: 200px;
-  font-size: 30px;
+  font-size: 20px;
   margin: 1rem;
   margin-top: 0;
+  background-color: white;
+  border-radius: 3px;
+  border: 2px solid #7cc576;
+  position: relative;
 }
 
-.list {
+.button-grp > button:after {
+  padding-left: 0;
+  content: "+";
+  opacity: 0;
+  position: absolute;
+}
+
+.button-grp > .active {
+  background-color: #7cc576;
+  color: white;
+}
+
+.button-grp > .active:after {
+  color: white;
+  padding-left: 10px;
+  opacity: 1;
+  transition: 0.5s;
+}
+
+.button-grp > button:focus {
+  outline: 0.5px solid #7cc576;
+  box-shadow: 00 0 0 1pt #7cc576;
+  background-color: #7cc576;
+  color: white;
+}
+
+.button-grp > button:hover {
+  background-color: #7cc576;
+  color: white;
+  transition: 0.5s;
+}
+
+.button-grp > button .list {
   border: 1px solid black;
   padding: 1rem;
 }
 
-.prof-list div {
+.prof-Tags {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-bottom: 1em;
 }
 
-.item > a {
-  text-decoration: none;
-  color: black;
-  width: 100%;
+.prof-Tags > .tag-box {
+  margin: 1em 0 0 1em;
 }
 
 @media screen and (max-width: 500px) {
   .button-grp {
     margin-top: 3rem;
+  }
+
+  .prof-Tags {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding-bottom: 1em;
   }
 }
