--- a/src/components/formComponents/SearchBar.css
+++ b/src/components/formComponents/SearchBar.css
@@ -18,11 +18,15 @@
   border: 1px solid black;
   border-radius: 3px;
   height: 50px;
+  font-size: 1.5rem;
+  width: 100%;
 }
 
 .search-h1 {
   margin: 0 1rem 0 0;
   font-size: 1.5rem;
+  font-family: Kanit;
+  font-weight: 600;
 }
 
 .search-select {
