--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,6 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: Cairo, source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
