--- a/src/components/ProfilePage/ProfilePage.css
+++ b/src/components/ProfilePage/ProfilePage.css
@@ -15,7 +15,7 @@
 .button-grp > button {
   font-family: Cairo;
   width: 200px;
-  font-size: 20px;
+  font-size: 1.3rem;
   margin: 1rem;
   margin-top: 0;
   background-color: white;
