--- a/src/components/formComponents/CreateLog.css
+++ b/src/components/formComponents/CreateLog.css
@@ -1,9 +1,155 @@
 .added-tags-wrapper {
   display: flex;
-  margin-left: 5px;
-  min-height: 25px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  overflow: hidden;
+  padding: 0.5rem 0;
+  min-height: 50px;
 }
 
+.added-tags-wrapper > .tag-box {
+  margin: 0 0 1em 1em;
+}
+
+.label {
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+
+fieldset input,
+textarea {
+  border: 1px solid black;
+  font-family: Cairo;
+  height: 40px;
+  font-size: 1.1rem;
+  padding-left: 2%;
+}
 .add-tag-container {
   display: flex;
+}
+
+.tag-options-wrapper {
+  background-color: white;
+  text-align: center;
+  position: absolute;
+  width: 190px;
+  z-index: 1;
+}
+
+.options-tag:hover,
+.option-active {
+  background-color: #ffd65b;
+}
+
+.addBorder {
+  border: 1px solid black;
+  border-top: 0;
+}
+
+.options-tag {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+
+.log-form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.log-fieldset {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin: auto;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 0 0 0 0;
+}
+
+.log-fieldset > legend {
+  text-align: center;
+}
+.log-fieldset > input {
+  width: 100%;
+}
+
+textarea {
+  width: 100%;
+  height: 15rem;
+  padding: 2%;
+}
+
+.btn-create-log,
+.btn-edit-log,
+.btn-add-tag {
+  font-family: Cairo;
+  font-size: 1.3rem;
+  background-color: white;
+  border-radius: 3px;
+  border: 2px solid #7cc576;
+}
+
+.btn-create-log:hover,
+.btn-edit-log:hover,
+.btn-add-tag:hover {
+  background-color: #7cc576;
+  background-image: linear-gradient(to bottom left, #7cc576, #2b4d28);
+  color: white;
+}
+
+.btn-create-log,
+.btn-edit-log {
+  font-family: Cairo;
+  width: 200px;
+  margin: 1rem;
+  background-color: white;
+  border-radius: 3px;
+  border: 2px solid #7cc576;
+}
+
+.btn-add-tag {
+  width: 30%;
+  max-width: 100px;
+  max-height: 42px;
+  margin: 0 0 1rem 1rem;
+  margin-top: 0;
+}
+@media screen and (max-width: 800px) {
+  .log-fieldset {
+    width: 70%;
+  }
+}
+@media screen and (max-width: 600px) {
+  .log-fieldset {
+    width: 100%;
+  }
+
+  .tag-options-wrapper {
+    width: 240px;
+  }
+
+  .btn-add-tag {
+    width: 50%;
+  }
+
+  .add-tag-container {
+    justify-content: space-between;
+  }
+
+  .add-tag-container > div {
+    width: 100%;
+  }
+
+  .add-tag-container > div > input {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .tag-options-wrapper {
+    width: 195px;
+  }
 }
