--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -8,41 +8,205 @@
 
 .banner {
   width: 100%;
-  color: aliceblue;
-  background-color: #000000;
+  color: black;
+  background-color: #ffd65b;
 }
 
 .banner-group {
-  width: 50%;
-  margin: 10% auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin: 100px 0;
+}
+
+.app-title-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.landing-page-icon {
+  width: 100px;
+  height: 100px;
 }
 
 .app-title {
+  font-family: Kanit;
+  line-height: 100px;
   font-size: 3rem;
   text-align: center;
+  margin: 0;
 }
 
 .app-desc {
   text-align: center;
+  font-size: 1.7rem;
+  font-weight: 600;
+  width: 50%;
+  margin: 0;
 }
 
-.button-group {
-  margin: 5% 0;
+.button-container > button {
+  font-family: Cairo;
+  width: 200px;
+  font-size: 1.3rem;
+  margin: 0;
+  background-color: white;
+  border-radius: 3px;
+  border: 2px solid #7cc576;
+  position: relative;
+}
+
+.app-info-wrapper {
+  width: 50%;
+}
+
+.right-header {
+  display: flex;
+  flex-direction: row-reverse;
+  margin-right: 50px;
+  margin-bottom: 0;
+}
+
+.left-header {
+  margin-left: 50px;
+  margin-bottom: 0;
+}
+
+.app-info-wrapper > p {
+  margin: 0;
+  font-size: 1.3rem;
+}
+
+.app-info-wrapper > p > span {
+  font-weight: 700;
+}
+
+.left-pointing {
+  display: flex;
+  flex-direction: row-reverse;
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
+
+.article-header {
+  display: flex;
+  justify-content: center;
+}
+
+.how-to-article {
   display: flex;
   flex-direction: column;
-}
-
-.button-group button {
+  padding: 0 2rem;
   width: 50%;
-  margin: 1% auto;
+  margin: auto;
 }
 
-/*Temp CSS */
-.button-group > a {
-  width: 50%;
-  margin: 1% auto;
+.p-icon-container {
+  display: flex;
 }
 
-a > button {
-  width: 100%;
+.right-arrow-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.left-arrow-container {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media screen and (max-width: 600px) {
+  .landing-page-nav {
+    margin: 0 !important;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    min-height: 50px;
+    height: 8%;
+    z-index: 100;
+    background-color: #ffd65b;
+    padding-top: 1rem;
+  }
+
+  .banner {
+    margin-top: 4rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .banner-group {
+    width: 100%;
+    margin: 0;
+    padding: 2rem;
+  }
+
+  .app-title {
+    font-size: 2.7rem;
+    margin: 0;
+    margin-right: 20px;
+  }
+
+  .app-desc {
+    width: 100%;
+    font-size: 1.2rem;
+  }
+
+  .app-info-wrapper {
+    width: 100%;
+  }
+
+  .left-header,
+  .right-header {
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+  }
+  .app-info-wrapper > p {
+    margin: 0;
+    font-size: 1rem;
+  }
+
+  .how-to-image {
+    width: 80%;
+    margin: auto;
+    display: block;
+  }
+
+  .how-to-article {
+    width: 100%;
+  }
+
+  .right-arrow-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .left-arrow-container {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .app-title {
+    font-size: 1.8rem;
+    margin: 0;
+  }
+
+  .landing-page-icon {
+    margin-left: -10px;
+  }
 }
