--- a/src/components/formComponents/Login.css
+++ b/src/components/formComponents/Login.css
@@ -1,9 +1,7 @@
-.login-form {
-  margin: 0 auto;
-  text-align: center;
+.login-fieldset > button {
+  margin-top: 20px;
 }
 
 .login-fieldset {
-  display: flex;
-  flex-direction: column;
+  width: initial;
 }
