--- a/src/components/LogPage/LogPage.css
+++ b/src/components/LogPage/LogPage.css
@@ -2,6 +2,6 @@
   display: flex;
   flex-direction: column;
   margin: 5rem 5% 0 5%;
-  height: 100vh;
+  min-height: 100vh;
   padding-bottom: 50px;
 }
