--- a/src/components/formComponents/SearchBar.css
+++ b/src/components/formComponents/SearchBar.css
@@ -12,6 +12,7 @@
   display: flex;
   justify-content: center;
   margin-bottom: 1rem;
+  align-items: center;
 }
 
 .search-form > input {
@@ -32,6 +33,22 @@
 .search-select {
   font-size: 1rem;
   border-radius: 5px;
+  padding: 8px 0;
+  margin-right: 5px;
+}
+
+.search-box {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.search-box > input {
+  width: 100%;
+  height: 50px;
+  border-radius: 5px;
+  border: 1px solid black;
+  margin-right: 5px;
 }
 
 @media screen and (max-width: 500px) {
